@@ -67,4 +67,7 @@ allOpen {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading"
+    ]
 }
